chucker added, total price fix

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 
     implementation 'com.airbnb.android:lottie:6.1.0'
+
+    implementation "com.github.chuckerteam.chucker:library:4.0.0"
 }
